app/static/main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 30px;
    color: #fff;
    padding: 14px;
    margin-bottom: 150px;
    font-weight: bolder;
}



.navbar-span {
    color: #fff;
    font-size: 1.8rem;
}

.links {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 30px;
    list-style: none;
}

.links > li > a {
    text-decoration: none;
    color: #fff;
    font-size: 1.2rem;
}



.form-fieldset {
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
    padding: 25px;
    border-radius: 12px;
    
}

.form-group {
    width: 100%;
    height: 100%;
}


.register-form {
    display: flex;
    flex-direction: column;
    gap: 25px;
}

.form-label {
    font-size: 1.2rem;
    font-weight: bolder;
}

.register-form > input {
    width: 100%;
}

.client-info {
    display: flex;
    flex-direction: column;
    margin-top: 50px;
}

.span {
    font-size: 0.8rem;
    font-weight: bold;
}

footer {
    padding: 12px;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 50px;
}

.header-1 {
    font-size: 2.5rem;
    font-weight: bolder;
}

@media screen and (max-width: 480px) {
    .links {
        padding: 7px;
    }

    .navbar-span {
        font-size: 1.2rem;
    }

    .links > li > a {
        font-size: 0.8rem;
    }
}

